# homework-33

./: README.md  data_sample.xlsx  pyproject.toml  requirements
config/: settings.py
materials/: models.py  serializers.py  tasks.py  views.py
users/: views.py
